methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:2: error: value avance is not a member of String
def isFacingTrail():Boolean = {var c="" avance();c = getCouleurSol();recule(); if (c == Color.green) {return(true);} else {return(false);};
                                        ^